# Ros2Basics

./: README.md
aa_my_pack_cpp/: CMakeLists.txt  package.xml
aa_my_pack_cpp/launch/: helloWorld.launch.py  helloWorldLoop.launch.py
aa_my_pack_cpp/src/: helloWorld.cpp  helloWorldLoop.cpp
aa_my_pack_py/: package.xml  setup.cfg  setup.py
aa_my_pack_py/aa_my_pack_py/: helloWorld.py  helloWorldLoop.py
aa_my_pack_py/launch/: helloWorld.launch.py  helloWorldLoop.launch.py
ab_topic_publisher_cpp/: CMakeLists.txt  package.xml
ab_topic_publisher_cpp/launch/: oopublisher.launch.py  publisher.launch.py
ab_topic_publisher_cpp/src/: oopublisher.cpp  publisher.cpp
ab_topic_publisher_py/: package.xml  setup.cfg  setup.py
ab_topic_publisher_py/ab_topic_publisher_py/: oopublisher.py
ab_topic_publisher_py/launch/: oopublisher.launch.py
ac_topic_subscription_cpp/: CMakeLists.txt  package.xml
ac_topic_subscription_cpp/launch/: oopsubscription.launch.py
ac_topic_subscription_cpp/src/: oopsubscription.cpp
ac_topic_subscription_py/: package.xml  setup.cfg  setup.py
ac_topic_subscription_py/ac_topic_subscription_py/: oopsubscription.py
ac_topic_subscription_py/launch/: oopsubscription.launch.py
ad_pub_sub_cpp/: CMakeLists.txt  package.xml
ad_pub_sub_cpp/launch/: pub_tb3.launch.py
ad_pub_sub_cpp/src/: pub_tb3.cpp
ad_pub_sub_py/: package.xml  setup.cfg  setup.py
ad_pub_sub_py/ad_pub_sub_py/: pub_tb3.py
ad_pub_sub_py/launch/: pub_tb3.launch.py
ae_custom_interface_cpp/: CMakeLists.txt  package.xml
ae_custom_interface_cpp/launch/: person_publisher.launch.py
ae_custom_interface_cpp/msg/: Person.msg
ae_custom_interface_cpp/src/: person_publisher.cpp
ae_custom_interface_py/: package.xml  setup.cfg  setup.py
ae_custom_interface_py/ae_custom_interface_py/: person_publisher.py
ae_custom_interface_py/launch/: person_publisher.launch.py
af_obstacle_avoidance_cpp/: CMakeLists.txt  package.xml
af_obstacle_avoidance_cpp/launch/: a_wall.launch.py  all.launch.xml  b_wall_better_way.launch.py  c_tb3.launch.py  c_tb3_sdf.launch.py  c_tb3_urdf.launch.py  d_tb3_urdf.launch.py  d_tb3_urdf_more_complex.launch.py  e_tb3_sdf2.launch.py  f_full.launch.py  robot_state_publisher.launch.py
af_obstacle_avoidance_cpp/model/: model.urdf  my_tb3.urdf.xacro  robot.urdf  soheil.urdf.xacro  soso.urdf  turtlebot3_waffle.gazebo.xacro  turtlebot3_waffle.urdf.xacro
af_obstacle_avoidance_cpp/src/: avoidance.cpp
af_obstacle_avoidance_cpp/worlds/: maze.world.xml  room.world.xml
af_obstacle_avoidance_py/: package.xml  setup.cfg  setup.py
af_obstacle_avoidance_py/af_obstacle_avoidance_py/: avoidance.py
af_obstacle_avoidance_py/launch/: avoidance.launch.py
af_obstacle_avoidance_py/model/: info.txt  turtlebot3_waffle.gazebo.xacro  turtlebot3_waffle.urdf.xacro  turtlebot3_waffle_pi.urdf
ag_service_cpp/: CMakeLists.txt  package.xml
ag_service_cpp/launch/: service.launch.py  service_client.launch.py
ag_service_cpp/model/: my_tb3.urdf.xacro
ag_service_cpp/src/: empty_service_client.cpp  empty_service_server.cpp
ag_service_py/: package.xml  setup.cfg  setup.py
ah_square_service_cpp/: CMakeLists.txt  package.xml
ah_square_service_cpp/launch/: square_service_server.launch.py
ah_square_service_cpp/src/: square_service_client.cpp  square_service_server.cpp
ah_square_service_cpp/srv/: MyCustomServiceMessage.srv
ah_square_service_py/: package.xml  setup.cfg  setup.py
tb3dlidar/: CMakeLists.txt  package.xml
tb3dlidar/launch/: tb3.launch.py
tb3dlidar/model/: my_tb3.urdf.xacro  my_tb3.urdf_messed_up.xacro
tb3dlidar/worlds/: Final.world.xml
test_cpp/: CMakeLists.txt  package.xml
test_cpp/launch/: pub.launch.py  server.launch.py
test_cpp/msg/: Blah.msg
test_cpp/src/: client.cpp  publish.cpp  server.cpp
test_py/: package.xml  setup.py
